# PeppeCalc-1

./: .gitignore  CMakeLists.txt  README.md  tests.txt
src/: get_str.c  get_str.h  main.c  operations.c  operations.h  stack.c  stack.h
src/.c files/: get_str.c  main.c  operations.c  stack.c
src/Headers/: constants_of_functions.h  get_str.h  operations.h  queue.h  stack.h  variable_operations.h
src/Search/: constants_of_functions.c  get_str.c  main.c  operations.c  queue.c  stack.c  variable_operations.c
